# arang-framework

./: .gdb_history  .gitignore  CMakeLists.txt  README.md  linker.ld
include/kernel/: ADC.h  EEPROM.h  analog_pin.h  digital_pin.h  multitasking.h  optiboot.h  progmem.h  terminal.h  timer.h  uasrt.h  utils.h
include/kernel/driver/: buzzer.h  light_sensor.h  motor.h  rgb_led.h
src/: boot.c
src/kernel/: ADC.c  EEPROM.c  analog_pin.c  boot.c  multitasking.c  progmem.c  terminal.c  timer.c  uasrt.c  utils.c
src/kernel/driver/: buzzer.c  light_sensor.c  motor.c  rgb_led.c
